# haskell-bplist

./: README.md  bplist.cabal
src/Data/PList/: Binary.hs
test/: properties.hs
