name:                bplist
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Tristan Konolige
maintainer:          tristan@konolige.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.PList.Binary
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       unordered-containers,
                       binary,
                       vector,
                       mtl,
                       bytestring,
                       text,
                       time,
                       bifunctors,
                       lens
  hs-source-dirs:      src
  default-language:    Haskell2010
