name:                bplist
version:             0.1.0.0
description:         Encoding and decoding for Apple's Binary Property List format
license:             BSD3
license-file:        LICENSE
author:              Tristan Konolige
maintainer:          tristan@konolige.com
copyright:           Tristan Konolige, 2015
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.PList.Binary
  build-depends:       base >=4 && <5,
                       unordered-containers,
                       binary,
                       vector,
                       mtl,
                       bytestring,
                       text,
                       time,
                       bifunctors,
                       lens,
                       data-binary-ieee754
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             properties.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       bplist,
                       derive,
                       vector,
                       process,
                       bytestring,
                       temporary,
                       unordered-containers,
                       quickcheck-instances,
                       QuickCheck,
                       test-framework,
                       test-framework-quickcheck2,
                       test-framework-th
